--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                    { <br> &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<span style="color: rgb(168, 79, 252);">"name"</span>: <span style="color: rgb(252, 157, 79);">"John Doe"</span>,<br>
                    &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<span style="color: rgb(168, 79, 252);">"title"</span>: <span style="color: rgb(252, 157, 79);">"Web Developer"</span>,<br>
                    &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<span style="color: rgb(168, 79, 252);">"contuct"</span>: <span style="color: rgb(252, 249, 79);">{ <br></span>
-                     &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;  &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<span style="color: #88ff00;">"email"</span><br>
+                     &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;  &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<span style="color: #88ff00;">"email"</span></span><br>
                 }
                 </div>
             </div>
